service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-virtual-service
  namespace: dev # Can be changed to prod as needed
spec:
  hosts:
    - backend-service # The Kubernetes service name
  http:
    - route:
        - destination:
            host: backend-service
            subset: v1 # Defined in DestinationRule
          weight: 90
        - destination:
            host: backend-service
            subset: v2 # Defined in DestinationRule
          weight: 10
